	pcre, xdr and zlib are now only compiled in a way that allows
	the code to be included in a shared library if this option is
	specified, which might improve performance when it is not.

    o   The main R executable is now R_HOME/exec/R not R_HOME/R.bin, to
	ease issues on MacOS X.  (The location is needed when debugging
	core dumps.)


BUG FIXES

    o	rbind.data.frame() dropped names/rownames from columns in all
	but the first data frame.

    o	The dimnames<- method for data.frames was not checking the
	validity of the row names.




	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary() works.

    o	legend() has a new argument 'pt.cex'.

    o	plot.ts() has more arguments, particularly 'yax.flip'.


INSTALLATION ISSUES

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.	(This is a bug in their header files but we have
	added a workaround.)

    o	Building with gcc/g77 3.4.0 on ix86 platforms failed to produce
	a working build: the critical LAPACK routines are now compiled
	with -ffloat-store.

    o	Added patches to enable 64-bit builds on AIX 5.1: see the R-admin
	manual for details.

    o	Added some patches to allow non-IEEE-754 installations to work
	reasonably well.  (Infs and NAs are still not handled properly
	in complex arithmetics and functions such as sin().)


BUG FIXES

    o	pbinom(q, N, prob) is now more accurate when prob is close to 0.
	(PR#6757).

    o	pcauchy(x, .., log.p) is now more accurate for large x,
	particularly when log.p = TRUE.	(PR#6756)

    o	pgeom(q, prob, lower.tail, log.p) is now (sometimes much) more
	accurate when prob is very small. (PR#6792)

	The code for pgeom(prob=1) assumed IEEE 754 arithmetic, and