@@ -75,7 +75,7 @@
 
 /*---------------------------------------------*/
 static 
-__inline__
+R_INLINE
 void fallbackSimpleSort ( UInt32* fmap, 
                           UInt32* eclass, 
                           Int32   lo, 
@@ -389,9 +389,10 @@ void fallbackSort ( UInt32* fmap,
 /*---------------------------------------------*/
 
 /*---------------------------------------------*/
+/* Solaris cc objects to inlining functions whose names start wtih `main' */
 static
-__inline__
-Bool mainGtU ( UInt32  i1, 
+R_INLINE
+Bool BZmainGtU ( UInt32  i1, 
                UInt32  i2,
                UChar*  block, 
                UInt16* quadrant,
@@ -402,7 +403,7 @@ Bool mainGtU ( UInt32  i1,
    UChar  c1, c2;
    UInt16 s1, s2;
 
-   AssertD ( i1 != i2, "mainGtU" );
+   AssertD ( i1 != i2, "BZmainGtU" );
    /* 1 */
    c1 = block[i1]; c2 = block[i2];
    if (c1 != c2) return (c1 > c2);
@@ -558,7 +559,7 @@ void mainSimpleSort ( UInt32* ptr,
          if (i > hi) break;
          v = ptr[i];
          j = i;
-         while ( mainGtU ( 
+         while ( BZmainGtU ( 
                     ptr[j-h]+d, v+d, block, quadrant, nblock, budget 
                  ) ) {
             ptr[j] = ptr[j-h];
@@ -572,7 +573,7 @@ void mainSimpleSort ( UInt32* ptr,
          if (i > hi) break;
          v = ptr[i];
          j = i;
-         while ( mainGtU ( 
+         while ( BZmainGtU ( 
                     ptr[j-h]+d, v+d, block, quadrant, nblock, budget 
                  ) ) {
             ptr[j] = ptr[j-h];
@@ -586,7 +587,7 @@ void mainSimpleSort ( UInt32* ptr,
          if (i > hi) break;
          v = ptr[i];
          j = i;
-         while ( mainGtU ( 
+         while ( BZmainGtU ( 
                     ptr[j-h]+d, v+d, block, quadrant, nblock, budget 
                  ) ) {
             ptr[j] = ptr[j-h];
@@ -626,7 +627,7 @@ void mainSimpleSort ( UInt32* ptr,
 }
 
 static 
-__inline__
+R_INLINE
 UChar mmed3 ( UChar a, UChar b, UChar c )
 {
    UChar t;
